--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "app": "concurrently \"npm run frontend\" \"npm run backend\"",
-    "frontend": "cd frontend && npm start",
-    "backend": "cd Flask && python app.py",
+    "dev": "concurrently \"npm run frontend\" \"npm run backend\"",
+    "client": "cd frontend && npm start",
+    "server": "cd Flask && python app.py",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "test": "echo \"Error: no test specified\" && exit 1"
