--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "concurrently \"npm run frontend\" \"npm run backend\"",
+    "dev": "concurrently \"npm run client\" \"npm run server\"",
     "client": "cd frontend && npm start",
     "server": "cd Flask && python app.py",
     "predeploy": "npm run build",
